bin_PROGRAMS = warzone
AM_CPPFLAGS = -I../lib/framework -I../lib/gamelib -I../lib/$(RENDERER) \
	-I../lib/netplay -I../lib/script -I../lib/sequence -I../lib/sound \
	-I../lib/widget -I../lib/ivis_common -I..
warzone_SOURCES = \
		ai.c \
		astar.c \
		action.c \
		advvis.c \
		atmos.c \
		bridge.c \
		buildpos.c \
		cdspan.c \
		cheat.c \
		cluster.c \
		cmddroid.c \
		combat.c \
		component.c \
		console.c \
		data.c \
		design.c \
		difficulty.c \
		disp2d.c \
		display.c \
		droid.c \
		e3demo.c \
		edit2d.c \
		edit3d.c \
		effects.c \
		environ.c \
		fpath.c \
		feature.c \
		findpath.c \
		formation.c \
		frontend.c \
		gateway.c \
		gatewayroute.c \
		gatewaysup.c \
		geometry.c \
		group.c \
		hci.c \
		init.c \
		intdisplay.c \
		intimage.c \
		intorder.c \
		intelmap.c \
		keybind.c \
		keymap.c \
		level_l.c \
		levels.c \
		lighting.c \
		loop.c \
		main.c \
		map.c \
		mapdisplay.c \
		mapgrid.c \
		mechanics.c \
		message.c \
		miscimd.c \
		move.c \
		multiint.c \
		multimenu.c \
		multiopt.c \
		multisync.c \
		multibot.c \
		multistat.c \
		objmem.c \
		objects.c \
		optimisepath.c \
		order.c \
		player.c \
		powercrypt.c \
		radar.c \
		raycast.c \
		research.c \
		scores.c \
		scriptai.c \
		scriptcb.c \
		scriptextern.c \
		scriptfuncs.c \
		scriptobj.c \
		scripttabs.c \
		scriptvals.c \
		scriptvals_l.c \
		scriptvals_y.c \
		selection.c \
		stats.c \
		text.c \
		texture.c \
		transporter.c \
		visibility.c \
		warcam.c \
		water.c \
		wrappers.c \
		ani.c \
		arrow.c \
		aud.c \
		audio_id.c \
		bucket3d.c \
		clparse.c \
		configuration.c \
		csnap.c \
		display3d.c \
		drive.c \
		function.c \
		game.c \
		ingameop.c \
		keyedit.c \
		loadsave.c \
		mission.c \
		mplayer.c \
		multigifts.c \
		multijoin.c \
		multilimit.c \
		multiplay.c \
		multistruct.c \
		oprint.c \
		power.c \
		projectile.c \
		readfiles.c \
		seqdisp.c \
		structure.c \
		target.c \
		warzoneconfig.c \
		action.h \
		advvis.h \
		aidef.h \
		ai.h \
		anim_id.h \
		arrow.h \
		astar.h \
		atmos.h \
		audio_id.h \
		base.h \
		bridge.h \
		bucket3d.h \
		buildpos.h \
		bulletdef.h \
		bullet.h \
		cdspan.h \
		cheat.h \
		clparse.h \
		cluster.h \
		cmddroiddef.h \
		cmddroid.h \
		combat.h \
		component.h \
		config.h \
		console.h \
		csnap.h \
		data.h \
		deliverance.h \
		design.h \
		difficulty.h \
		disp2d.h \
		display3ddef.h \
		display3d.h \
		displaydef.h \
		display.h \
		drive.h \
		droiddef.h \
		droid.h \
		e3demo.h \
		edit2d.h \
		edit3d.h \
		effects.h \
		environ.h \
		featuredef.h \
		feature.h \
		findpath.h \
		formationdef.h \
		formation.h \
		fpath.h \
		frend.h \
		frontend.h \
		functiondef.h \
		function.h \
		gamedefs.h \
		game.h \
		gatewaydef.h \
		gateway.h \
		gatewayroute.h \
		geometry.h \
		group.h \
		hci.h \
		ingameop.h \
		init.h \
		intdisplay.h \
		intelmap.h \
		intfac.h \
		intimage.h \
		intorder.h \
		ivis02.h \
		keybind.h \
		keyedit.h \
		keymap.h \
		levelint.h \
		levels.h \
		lighting.h \
		loadsave.h \
		loop.h \
		losroute.h \
		mapdisplay.h \
		mapgrid.h \
		map.h \
		mechanics.h \
		messagedef.h \
		message.h \
		miscimd.h \
		missiondef.h \
		mission.h \
		movedef.h \
		move.h \
		mpdpxtra.h \
		multigifts.h \
		multiint.h \
		multijoin.h \
		multilimit.h \
		multimenu.h \
		multiplay.h \
		multirecv.h \
		multistat.h \
		objectdef.h \
		objects.h \
		objmem.h \
		oprint.h \
		optimisepath.h \
		orderdef.h \
		order.h \
		player.h \
		powercrypt.h \
		power.h \
		projectile.h \
		radar.h \
		raycast.h \
		researchdef.h \
		research.h \
		resource.h \
		scores.h \
		scriptai.h \
		scriptcb.h \
		scriptextern.h \
		scriptfuncs.h \
		scriptobj.h \
		scripttabs.h \
		scriptvals.h \
		scriptvals_y.h \
		selection.h \
		seqdisp.h \
		statsdef.h \
		stats.h \
		structuredef.h \
		structure.h \
		target.h \
		text.h \
		texture.h \
		transporter.h \
		visibility.h \
		warcam.h \
		warzoneconfig.h \
		weapons.h \
		winmain.h \
		wrappers.h

warzone_libs =  ../lib/framework/libframework.a \
		../lib/sound/libsound.a \
		../lib/netplay/libnetplay.a \
		../lib/script/libscript.a \
		../lib/ivis_common/libivis_common.a \
		../lib/$(RENDERER)/lib$(RENDERER).a \
		../lib/gamelib/libgamelib.a \
		../lib/sequence/libsequence.a \
		../lib/widget/libwidget.a

warzone_LDFLAGS = -L../lib/framework -L../lib/gamelib -L../lib/$(RENDERER) \
	-L../lib/netplay -L../lib/script -L../lib/sequence -L../lib/sound \
	-L../lib/widget -L../lib/ivis_common
warzone_DEPENDENCIES = $(warzone_libs)
warzone_LDADD        = $(warzone_libs)

# On every build, record the working copy revision string in revision.h
# if svnversion is not installed, it will be just an empty string.
# Also delete frontend.o so it is remade unconditionally to have an
# up-to-date revision number.
STUPID_TRICK := $(shell rm -rf frontend.o)
REWRITE_REVISION_H1 := $(shell echo -n '\#define SVN_REVISION "Revision ' > revision.h)
REWRITE_REVISION_H2 := $(shell svnversion -n . >> revision.h)
REWRITE_REVISION_H3 := $(shell echo '"' >> revision.h)
CFLAGS += $(STUPID_TRICK) $(REWRITE_REVISION_H1) $(REWRITE_REVISION_H2) $(REWRITE_REVISION_H3)

